Added java options, changed regexes to work with forge servers

--- a/mcbc.conf
+++ b/mcbc.conf
@@ -2,6 +2,7 @@
 screen_name='minecraft'
 min_memory=512M
 max_memory=2048M
+java_options=( )
 jar_name='paperclip.jar'
 autoupdate_jar=true
 jar_url='https://papermc.io/api/v1/paper/1.16.5/latest/download'
